--- a/demo/dubbo-spi/pom.xml
+++ b/demo/dubbo-spi/pom.xml
@@ -3,10 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>dubbo-parent</artifactId>
+        <artifactId>demo</artifactId>
         <groupId>org.apache.dubbo</groupId>
-        <version>2.7.9-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,8 +17,6 @@
         <artifactId>dubbo-common</artifactId>
         <version>${project.version}</version>
     </dependency>
-
-
 </dependencies>
 
 </project>
